[FIX] <pro>TextField: Fix the problem that the floating label and the rendered value overlap when the null value is rendered to a non empty text.

--- a/components-pro/table/style/index.less
+++ b/components-pro/table/style/index.less
@@ -87,10 +87,6 @@
         }
       }
 
-      > * {
-        vertical-align: middle;
-      }
-
       &-fixed-height {
         overflow: hidden;
         text-overflow: ellipsis;
@@ -148,6 +144,10 @@
           display: block;
         }
       }
+    }
+
+    &:not(&-aggregation) &-inner > * {
+      vertical-align: middle;
     }
 
     &-tree {
